[gd_scene load_steps=11 format=3 uid="uid://cq5xjq42vqle1"]

[ext_resource type="Script" path="res://scripts/objects/asteroid.gd" id="1_jvtw7"]
[ext_resource type="Texture2D" uid="uid://cf4pjsq20246g" path="res://assets/objects/asteroids.webp" id="2_lgj0c"]

[sub_resource type="CircleShape2D" id="CircleShape2D_l2jqj"]
radius = 6.0

[sub_resource type="Curve" id="Curve_apd75"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_3dof6"]
curve = SubResource("Curve_apd75")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_4rvk4"]
particle_flag_disable_z = true
spread = 180.0
initial_velocity_min = 0.1
initial_velocity_max = 0.5
gravity = Vector3(0, 0, 0)
scale_min = 2.0
scale_max = 2.0
scale_curve = SubResource("CurveTexture_3dof6")
color = Color(0.882353, 0.882353, 0.882353, 0.443137)

[sub_resource type="Gradient" id="Gradient_re6qa"]
offsets = PackedFloat32Array(0, 0.979487)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_icgag"]
gradient = SubResource("Gradient_re6qa")

[sub_resource type="CurveTexture" id="CurveTexture_ycf8l"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_qa1ci"]
particle_flag_disable_z = true
radial_velocity_max = 30.0
radial_velocity_curve = SubResource("CurveTexture_ycf8l")
gravity = Vector3(0, 0, 0)
scale_min = 4.0
scale_max = 4.0
color = Color(1, 0.580392, 0, 1)
color_ramp = SubResource("GradientTexture1D_icgag")

[node name="Asteroid" type="Area2D" node_paths=PackedStringArray("explode_particle")]
position = Vector2(-1, -14)
script = ExtResource("1_jvtw7")
explode_particle = NodePath("Explode")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_l2jqj")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_lgj0c")
region_enabled = true
region_rect = Rect2(0, 0, 16, 16)

[node name="Timeout" type="Timer" parent="."]
wait_time = 20.0
one_shot = true
autostart = true

[node name="Trail" type="GPUParticles2D" parent="."]
amount = 5
process_material = SubResource("ParticleProcessMaterial_4rvk4")

[node name="Explode" type="GPUParticles2D" parent="."]
emitting = false
amount = 30
process_material = SubResource("ParticleProcessMaterial_qa1ci")
lifetime = 2.0
one_shot = true
speed_scale = 4.0
explosiveness = 1.0
randomness = 1.0
trail_enabled = true
trail_lifetime = 0.1

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timeout" to="." method="_on_timer_timeout"]
[connection signal="finished" from="Explode" to="." method="_on_explode_finished"]
